--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/pedro.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pedro Zavala</title>
-    <base href="/home/" />
+    <base href="/" />
   </head>
   <body>
     <div id="root"></div>
